# qt-project-feature-qml_design

./: .gitignore  CMakeLists.txt
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
docker/: Dockerfile  docker-compose.yaml
resources/: main.qml  qml.qrc  test_map.csv  test_sonar.csv
src/: attitudeindicator.cpp  attitudeindicator.h  basedrawler.cpp  basedrawler.h  cloudsdrawler.cpp  cloudsdrawler.h  cloudsvisualizer.cpp  cloudsvisualizer.h  cloudswisualizer.cpp  cloudswisualizer.h  compass.cpp  compass.h  main.cpp  mainwindow.cpp  mainwindow.h  modeldrawler.cpp  modeldrawler.h  testwidget.cpp  testwidget.h  types.h  utils.cpp  utils.h  vehiclestatetable.cpp  vehiclestatetable.h  vehiclestatetable.ui
src/auv_model/: CMakeLists.txt  package.xml
src/auv_model/launch/: display.launch  gazebo.launch
src/auv_model/meshes/: Cap.STL  Equipment.STL  Hydroacoustics.STL  Mover.STL  Superstructure.STL  base_link.STL
src/auv_model/urdf/: URDF_model.gazebo  URDF_model.xacro  materials.xacro
src/gazebo_terrain/: CMakeLists.txt  package.xml
src/gazebo_terrain/launch/: terrain_1.launch
src/gazebo_terrain/models/terrain_1/: model.config  model.sdf
src/gazebo_terrain/models/terrain_1/media/scripts/: repeated.material
src/gazebo_terrain/worlds/: terrain_1.world
src/rov_gui_package/: CMakeLists.txt  README.md  package.xml
src/rov_gui_package/include/rov_gui_package/: attitudeindicator.h  cloudsdrawler.h  cloudsvisualizer.h  compass.h  mainwindow.h  modeldrawler.h  shell.h  testwidget.h  testwidget.ui  types.h  utils.h  vehiclestatetable.h
src/rov_gui_package/nodes/: gui_node.cpp
src/rov_gui_package/resources/: submarine.mtl
src/rov_gui_package/src/: attitudeindicator.cpp  basedrawler.cpp  cloudsdrawler.cpp  cloudsvisualizer.cpp  compass.cpp  mainwindow.cpp  modeldrawler.cpp  models.qrc  shell.cpp  testwidget.cpp  utils.cpp  vehiclestatetable.cpp
src/rov_localization_package/: CMakeLists.txt  package.xml
src/rov_localization_package/hydroacoustic_localization/: CMakeLists.txt
src/rov_localization_package/hydroacoustic_localization/include/hydroacoustic_localization/: diagnostic_extractor.h  mather_shell.h  scan_mather_manager.h  transform.h  types.h  utils.h  yaml-convert.h
src/rov_localization_package/hydroacoustic_localization/src/: diagnostic_extractor.cpp  mather_shell.cpp  scan_mather_manager.cpp  transform.cpp  utils.cpp
src/rov_localization_package/nodes/: hydroacoustic_localization_node.cpp
src/rov_msgs_package/: CMakeLists.txt  package.xml
src/rov_msgs_package/msg/: SonarData.msg  VehiclePose.msg
src/rov_msgs_package/srv/: CloudMap.srv
src/simulation_support/: CMakeLists.txt  package.xml
src/simulation_support/nodes/: keyboard.py
