<?xml version="1.0"?>
<package format="2">
  <name>auv_model</name>
  <version>0.0.0</version>
  <description>The auv model package</description>

  <maintainer email="ewegexa@gmail.com">Eugene Baranov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
