<?xml version="1.0"?>
<package format="2">
  <name>gazebo_terrain</name>
  <version>0.0.0</version>
  <description>The gazebo_terrain package</description>

  <maintainer email="ewegexa@gmail.com">Eugene Baranov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>husky-description</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
