<?xml version="1.0"?>
<package>
  <name>rov_msgs_package</name>
  <version>0.1.0</version>
  <description>The rov_msgs_package package</description>

  <maintainer email="ewegexa@gmail.com">Eugene Baranov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
